# plugin-manager

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  SPEC.md  build.sh  manifest.json  meson.build  meson_options.txt  ppm.json  pragtical-plugin-manager.json
.github/workflows/: build.yml  release.yml
cross/: aarch64-linux-android.ini  aarch64-linux-musl.ini  armv7a-linux-androideabi.ini  i686-linux-android.ini  riscv64-linux-musl.ini  x86_64-linux-android.ini  x86_64-w64-mingw32.ini
libraries/: json.lua
plugins/: welcome.lua
plugins/plugin_manager/: init.lua  plugin_view.lua
src/: ppm.c  ppm.lua
subprojects/: libgit2.wrap  libzip.wrap  mbedtls.wrap
subprojects/packagefiles/libgit2/: meson.build
subprojects/packagefiles/libgit2/cmake/: SelectHTTPSBackend.cmake
subprojects/packagefiles/libgit2/src/libgit2/streams/: mbedtls.c
subprojects/packagefiles/libgit2/src/pcre/: config.h.in
subprojects/packagefiles/libgit2/src/util/: git2_features.h.in
subprojects/packagefiles/libzip/: config.h.in  meson.build  zipconf.h.in
t/: run.lua
tools/: embed_lua_source.py
