option('static', type : 'boolean', value : false, description: 'Build the pre-packaged lua file into the executable.')
option('install_plugin', type : 'boolean', value : false, description: 'Install the Pragtical plugin for ppm')
option('pragtical_datadir', type : 'string', value : '', description: 'Path to the Pragtical data directory, usually \'share/pragtical\'')
