project('libgit2', 'c', version : '1.9.0')

cc = meson.get_compiler('c')
host_system = host_machine.system()
is_windows = host_system == 'windows'
is_darwin = host_system == 'darwin'
is_android = host_system == 'android'
has_getentropy = cc.has_header_symbol('unistd.h', 'getentropy')
has_getloadavg = cc.has_header_symbol('stdlib.h', 'getloadavg')
has_bsd_qsort = host_system in ['darwin', 'freebsd', 'openbsd', 'netbsd', 'dragonfly']
has_gnu_qsort = (
  not is_windows and
  not has_bsd_qsort and
  cc.has_header_symbol('stdlib.h', 'qsort_r', args : ['-D_GNU_SOURCE'])
)
has_c11_qsort = (
  not is_windows and
  not has_bsd_qsort and
  not has_gnu_qsort and
  cc.has_header_symbol('stdlib.h', 'qsort_s', args : ['-D__STDC_WANT_LIB_EXT1__=1'])
)

zlib_dep = dependency('zlib', fallback : ['zlib', 'zlib_dep'])
mbedtls_dep = [
  dependency('mbedtls', fallback : ['mbedtls', 'mbedtls_dep']),
  dependency('mbedx509', fallback : ['mbedtls', 'mbedx509_dep']),
  dependency('mbedcrypto', fallback : ['mbedtls', 'tfpsacrypto_dep']),
]

configure_file(
  input : 'include/git2.h.in',
  output : 'git2.h',
  copy : true,
)

git_features = configuration_data()
libgit2_features = [
  ['GIT_THREADS', true],
  ['GIT_WIN32_LEAKCHECK', false],
  ['GIT_ARCH_64', cc.sizeof('void *') == 8],
  ['GIT_ARCH_32', cc.sizeof('void *') == 4],
  ['GIT_USE_NSEC', true],
  ['GIT_USE_STAT_MTIM', cc.compiles('''
  #include <sys/stat.h>
  int main(void) { struct stat st; (void)st.st_mtim.tv_nsec; return 0; }
''', name : 'struct stat has st_mtim.tv_nsec')],
  ['GIT_USE_STAT_MTIMESPEC', cc.compiles('''
  #include <sys/stat.h>
  int main(void) { struct stat st; (void)st.st_mtimespec.tv_nsec; return 0; }
''', name : 'struct stat has st_mtimespec.tv_nsec')],
  ['GIT_USE_STAT_MTIME_NSEC', cc.compiles('''
  #include <sys/stat.h>
  int main(void) { struct stat st; (void)st.st_mtime_nsec; return 0; }
''', name : 'struct stat has st_mtime_nsec')],
  ['GIT_USE_FUTIMENS', cc.has_function('futimens')],
]
libgit2_features += [
  ['GIT_REGEX_BUILTIN', true],
  ['GIT_QSORT_BSD', has_bsd_qsort],
  ['GIT_QSORT_GNU', has_gnu_qsort],
  ['GIT_QSORT_C11', has_c11_qsort],
  ['GIT_QSORT_MSC', is_windows],
  ['GIT_HTTPS', true],
  ['GIT_MBEDTLS', true],
  ['GIT_HTTPPARSER_BUILTIN', true],
  ['GIT_SHA1_COLLISIONDETECT', true],
  ['GIT_SHA256_BUILTIN', true],
  ['GIT_COMPRESSION_ZLIB', true],
  ['GIT_RAND_GETENTROPY', has_getentropy],
  ['GIT_RAND_GETLOADAVG', has_getloadavg],
  ['GIT_IO_POLL', not is_windows and cc.has_function('poll')],
  ['GIT_IO_WSAPOLL', is_windows],
  ['GIT_IO_SELECT', cc.has_function('select')],
]
foreach feature : libgit2_features
  if feature[1]
    git_features.set(feature[0], 1)
  endif
endforeach
configure_file(
  input : 'src/util/git2_features.h.in',
  output : 'git2_features.h',
  configuration : git_features,
)

pcre_conf = configuration_data()
foreach feature : [
  ['HAVE_DIRENT_H', cc.has_header('dirent.h')],
  ['HAVE_SYS_STAT_H', cc.has_header('sys/stat.h')],
  ['HAVE_SYS_TYPES_H', cc.has_header('sys/types.h')],
  ['HAVE_UNISTD_H', cc.has_header('unistd.h')],
  ['HAVE_WINDOWS_H', cc.has_header('windows.h')],
  ['HAVE_STDINT_H', cc.has_header('stdint.h')],
  ['HAVE_INTTYPES_H', cc.has_header('inttypes.h')],
  ['HAVE_BCOPY', cc.has_function('bcopy')],
  ['HAVE_MEMMOVE', cc.has_function('memmove')],
  ['HAVE_STRERROR', cc.has_function('strerror')],
  ['HAVE_STRTOLL', cc.has_function('strtoll')],
  ['HAVE_STRTOQ', cc.has_function('strtoq')],
  ['HAVE__STRTOI64', cc.has_function('_strtoi64')],
  ['PCRE_STATIC', true],
  ['SUPPORT_PCRE8', true],
  ['HAVE_LONG_LONG', cc.sizeof('long long') > 0],
  ['HAVE_UNSIGNED_LONG_LONG', cc.sizeof('unsigned long long') > 0],
]
  if feature[1]
    pcre_conf.set(feature[0], 1)
  endif
endforeach
pcre_conf.set('NEWLINE', '10')
pcre_conf.set('PCRE_POSIX_MALLOC_THRESHOLD', '10')
pcre_conf.set('PCRE_LINK_SIZE', '2')
pcre_conf.set('PCRE_PARENS_NEST_LIMIT', '250')
pcre_conf.set('PCRE_MATCH_LIMIT', '10000000')
pcre_conf.set('PCRE_MATCH_LIMIT_RECURSION', '10000000')
pcre_conf.set('PCREGREP_BUFSIZE', '20480')
configure_file(
  input : 'src/pcre/config.h.in',
  output : 'config.h',
  configuration : pcre_conf,
)

libgit2_system_deps = []
libgit2_link_args = []
if is_windows
  libgit2_system_deps += [
    cc.find_library('ws2_32', required : false),
    cc.find_library('rpcrt4', required : false),
    cc.find_library('crypt32', required : false),
    cc.find_library('secur32', required : false),
  ]
elif not is_darwin and not is_android
  libgit2_link_args += ['-lrt']
endif

libgit2_dir = include_directories(
  'src/libgit2',
  'src/util',
  'include',
  'deps/llhttp',
  'deps/pcre',
  'deps/xdiff',
  '.'
)
libgit2_sys = include_directories(is_system : true)
libgit2_inc = [libgit2_dir, libgit2_sys]
libgit2_src = files(
  'src/libgit2/annotated_commit.c',
  'src/libgit2/apply.c',
  'src/libgit2/attr.c',
  'src/libgit2/attr_file.c',
  'src/libgit2/attrcache.c',
  'src/libgit2/blame.c',
  'src/libgit2/blame_git.c',
  'src/libgit2/blob.c',
  'src/libgit2/branch.c',
  'src/libgit2/buf.c',
  'src/libgit2/cache.c',
  'src/libgit2/checkout.c',
  'src/libgit2/cherrypick.c',
  'src/libgit2/clone.c',
  'src/libgit2/commit.c',
  'src/libgit2/commit_graph.c',
  'src/libgit2/commit_list.c',
  'src/libgit2/config.c',
  'src/libgit2/config_cache.c',
  'src/libgit2/config_file.c',
  'src/libgit2/config_list.c',
  'src/libgit2/config_mem.c',
  'src/libgit2/config_parse.c',
  'src/libgit2/config_snapshot.c',
  'src/libgit2/crlf.c',
  'src/libgit2/delta.c',
  'src/libgit2/describe.c',
  'src/libgit2/diff.c',
  'src/libgit2/diff_driver.c',
  'src/libgit2/diff_file.c',
  'src/libgit2/diff_generate.c',
  'src/libgit2/diff_parse.c',
  'src/libgit2/diff_print.c',
  'src/libgit2/diff_stats.c',
  'src/libgit2/diff_tform.c',
  'src/libgit2/diff_xdiff.c',
  'src/libgit2/email.c',
  'src/libgit2/fetch.c',
  'src/libgit2/fetchhead.c',
  'src/libgit2/filter.c',
  'src/libgit2/grafts.c',
  'src/libgit2/graph.c',
  'src/libgit2/hashsig.c',
  'src/libgit2/ident.c',
  'src/libgit2/ignore.c',
  'src/libgit2/index.c',
  'src/libgit2/index_map.c',
  'src/libgit2/indexer.c',
  'src/libgit2/iterator.c',
  'src/libgit2/libgit2.c',
  'src/libgit2/mailmap.c',
  'src/libgit2/merge.c',
  'src/libgit2/merge_driver.c',
  'src/libgit2/merge_file.c',
  'src/libgit2/message.c',
  'src/libgit2/midx.c',
  'src/libgit2/mwindow.c',
  'src/libgit2/notes.c',
  'src/libgit2/object.c',
  'src/libgit2/object_api.c',
  'src/libgit2/odb.c',
  'src/libgit2/odb_loose.c',
  'src/libgit2/odb_mempack.c',
  'src/libgit2/odb_pack.c',
  'src/libgit2/oid.c',
  'src/libgit2/oidarray.c',
  'src/libgit2/pack-objects.c',
  'src/libgit2/pack.c',
  'src/libgit2/parse.c',
  'src/libgit2/patch.c',
  'src/libgit2/patch_generate.c',
  'src/libgit2/patch_parse.c',
  'src/libgit2/path.c',
  'src/libgit2/pathspec.c',
  'src/libgit2/proxy.c',
  'src/libgit2/push.c',
  'src/libgit2/reader.c',
  'src/libgit2/rebase.c',
  'src/libgit2/refdb.c',
  'src/libgit2/refdb_fs.c',
  'src/libgit2/reflog.c',
  'src/libgit2/refs.c',
  'src/libgit2/refspec.c',
  'src/libgit2/remote.c',
  'src/libgit2/repository.c',
  'src/libgit2/reset.c',
  'src/libgit2/revert.c',
  'src/libgit2/revparse.c',
  'src/libgit2/revwalk.c',
  'src/libgit2/settings.c',
  'src/libgit2/signature.c',
  'src/libgit2/stash.c',
  'src/libgit2/status.c',
  'src/libgit2/strarray.c',
  'src/libgit2/streams/mbedtls.c',
  'src/libgit2/streams/openssl.c',
  'src/libgit2/streams/openssl_dynamic.c',
  'src/libgit2/streams/openssl_legacy.c',
  'src/libgit2/streams/registry.c',
  'src/libgit2/streams/schannel.c',
  'src/libgit2/streams/socket.c',
  'src/libgit2/streams/stransport.c',
  'src/libgit2/streams/tls.c',
  'src/libgit2/submodule.c',
  'src/libgit2/sysdir.c',
  'src/libgit2/tag.c',
  'src/libgit2/trace.c',
  'src/libgit2/trailer.c',
  'src/libgit2/transaction.c',
  'src/libgit2/transport.c',
  'src/libgit2/transports/auth.c',
  'src/libgit2/transports/auth_gssapi.c',
  'src/libgit2/transports/auth_ntlmclient.c',
  'src/libgit2/transports/auth_sspi.c',
  'src/libgit2/transports/credential.c',
  'src/libgit2/transports/credential_helpers.c',
  'src/libgit2/transports/git.c',
  'src/libgit2/transports/http.c',
  'src/libgit2/transports/httpclient.c',
  'src/libgit2/transports/httpparser.c',
  'src/libgit2/transports/local.c',
  'src/libgit2/transports/smart.c',
  'src/libgit2/transports/smart_pkt.c',
  'src/libgit2/transports/smart_protocol.c',
  'src/libgit2/transports/ssh.c',
  'src/libgit2/transports/ssh_exec.c',
  'src/libgit2/transports/ssh_libssh2.c',
  'src/libgit2/transports/winhttp.c',
  'src/libgit2/tree-cache.c',
  'src/libgit2/tree.c',
  'src/libgit2/worktree.c',
  'include/git2/annotated_commit.h',
  'include/git2/apply.h',
  'include/git2/attr.h',
  'include/git2/blame.h',
  'include/git2/blob.h',
  'include/git2/branch.h',
  'include/git2/buffer.h',
  'include/git2/cert.h',
  'include/git2/checkout.h',
  'include/git2/cherrypick.h',
  'include/git2/clone.h',
  'include/git2/commit.h',
  'include/git2/common.h',
  'include/git2/config.h',
  'include/git2/cred_helpers.h',
  'include/git2/credential.h',
  'include/git2/credential_helpers.h',
  'include/git2/deprecated.h',
  'include/git2/describe.h',
  'include/git2/diff.h',
  'include/git2/email.h',
  'include/git2/errors.h',
  'include/git2/experimental.h',
  'include/git2/filter.h',
  'include/git2/global.h',
  'include/git2/graph.h',
  'include/git2/ignore.h',
  'include/git2/index.h',
  'include/git2/indexer.h',
  'include/git2/mailmap.h',
  'include/git2/merge.h',
  'include/git2/message.h',
  'include/git2/net.h',
  'include/git2/notes.h',
  'include/git2/object.h',
  'include/git2/odb.h',
  'include/git2/odb_backend.h',
  'include/git2/oid.h',
  'include/git2/oidarray.h',
  'include/git2/pack.h',
  'include/git2/patch.h',
  'include/git2/pathspec.h',
  'include/git2/proxy.h',
  'include/git2/rebase.h',
  'include/git2/refdb.h',
  'include/git2/reflog.h',
  'include/git2/refs.h',
  'include/git2/refspec.h',
  'include/git2/remote.h',
  'include/git2/repository.h',
  'include/git2/reset.h',
  'include/git2/revert.h',
  'include/git2/revparse.h',
  'include/git2/revwalk.h',
  'include/git2/signature.h',
  'include/git2/stash.h',
  'include/git2/status.h',
  'include/git2/stdint.h',
  'include/git2/strarray.h',
  'include/git2/submodule.h',
  'include/git2/sys/alloc.h',
  'include/git2/sys/commit.h',
  'include/git2/sys/commit_graph.h',
  'include/git2/sys/config.h',
  'include/git2/sys/cred.h',
  'include/git2/sys/credential.h',
  'include/git2/sys/diff.h',
  'include/git2/sys/email.h',
  'include/git2/sys/errors.h',
  'include/git2/sys/filter.h',
  'include/git2/sys/hashsig.h',
  'include/git2/sys/index.h',
  'include/git2/sys/mempack.h',
  'include/git2/sys/merge.h',
  'include/git2/sys/midx.h',
  'include/git2/sys/odb_backend.h',
  'include/git2/sys/openssl.h',
  'include/git2/sys/path.h',
  'include/git2/sys/refdb_backend.h',
  'include/git2/sys/refs.h',
  'include/git2/sys/remote.h',
  'include/git2/sys/repository.h',
  'include/git2/sys/stream.h',
  'include/git2/sys/transport.h',
  'include/git2/tag.h',
  'include/git2/trace.h',
  'include/git2/transaction.h',
  'include/git2/transport.h',
  'include/git2/tree.h',
  'include/git2/types.h',
  'include/git2/version.h',
  'include/git2/worktree.h',
  'src/libgit2/annotated_commit.h',
  'src/libgit2/apply.h',
  'src/libgit2/attr.h',
  'src/libgit2/attr_file.h',
  'src/libgit2/attrcache.h',
  'src/libgit2/blame.h',
  'src/libgit2/blame_git.h',
  'src/libgit2/blob.h',
  'src/libgit2/branch.h',
  'src/libgit2/buf.h',
  'src/libgit2/cache.h',
  'src/libgit2/checkout.h',
  'src/libgit2/clone.h',
  'src/libgit2/commit.h',
  'src/libgit2/commit_graph.h',
  'src/libgit2/commit_list.h',
  'src/libgit2/common.h',
  'src/libgit2/config.h',
  'src/libgit2/config_backend.h',
  'src/libgit2/config_list.h',
  'src/libgit2/config_parse.h',
  'src/libgit2/delta.h',
  'src/libgit2/diff.h',
  'src/libgit2/diff_driver.h',
  'src/libgit2/diff_file.h',
  'src/libgit2/diff_generate.h',
  'src/libgit2/diff_parse.h',
  'src/libgit2/diff_stats.h',
  'src/libgit2/diff_tform.h',
  'src/libgit2/diff_xdiff.h',
  'src/libgit2/email.h',
  'src/libgit2/fetch.h',
  'src/libgit2/fetchhead.h',
  'src/libgit2/filter.h',
  'src/libgit2/grafts.h',
  'src/libgit2/hashmap_oid.h',
  'src/libgit2/ignore.h',
  'src/libgit2/index.h',
  'src/libgit2/index_map.h',
  'src/libgit2/indexer.h',
  'src/libgit2/iterator.h',
  'src/libgit2/mailmap.h',
  'src/libgit2/merge.h',
  'src/libgit2/merge_driver.h',
  'src/libgit2/midx.h',
  'src/libgit2/mwindow.h',
  'src/libgit2/notes.h',
  'src/libgit2/object.h',
  'src/libgit2/odb.h',
  'src/libgit2/oid.h',
  'src/libgit2/oidarray.h',
  'src/libgit2/pack-objects.h',
  'src/libgit2/pack.h',
  'src/libgit2/parse.h',
  'src/libgit2/patch.h',
  'src/libgit2/patch_generate.h',
  'src/libgit2/patch_parse.h',
  'src/libgit2/path.h',
  'src/libgit2/pathspec.h',
  'src/libgit2/proxy.h',
  'src/libgit2/push.h',
  'src/libgit2/reader.h',
  'src/libgit2/refdb.h',
  'src/libgit2/reflog.h',
  'src/libgit2/refs.h',
  'src/libgit2/refspec.h',
  'src/libgit2/remote.h',
  'src/libgit2/repo_template.h',
  'src/libgit2/repository.h',
  'src/libgit2/revwalk.h',
  'src/libgit2/settings.h',
  'src/libgit2/signature.h',
  'src/libgit2/status.h',
  'src/libgit2/strarray.h',
  'src/libgit2/stream.h',
  'src/libgit2/streams/mbedtls.h',
  'src/libgit2/streams/openssl.h',
  'src/libgit2/streams/openssl_dynamic.h',
  'src/libgit2/streams/openssl_legacy.h',
  'src/libgit2/streams/registry.h',
  'src/libgit2/streams/schannel.h',
  'src/libgit2/streams/socket.h',
  'src/libgit2/streams/stransport.h',
  'src/libgit2/streams/tls.h',
  'src/libgit2/submodule.h',
  'src/libgit2/sysdir.h',
  'src/libgit2/tag.h',
  'src/libgit2/trace.h',
  'src/libgit2/transaction.h',
  'src/libgit2/transports/auth.h',
  'src/libgit2/transports/auth_negotiate.h',
  'src/libgit2/transports/auth_ntlm.h',
  'src/libgit2/transports/http.h',
  'src/libgit2/transports/httpclient.h',
  'src/libgit2/transports/httpparser.h',
  'src/libgit2/transports/smart.h',
  'src/libgit2/transports/ssh_exec.h',
  'src/libgit2/transports/ssh_libssh2.h',
  'src/libgit2/tree-cache.h',
  'src/libgit2/tree.h',
  'src/libgit2/userdiff.h',
  'src/libgit2/worktree.h'
)
libgit2 = static_library(
  'libgit2',
  libgit2_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : libgit2_inc,
  install : false,
  override_options : [],
  objects : [],
  dependencies : [zlib_dep, mbedtls_dep, libgit2_system_deps],
  c_args : [
    '-D_GNU_SOURCE',
    '-Wno-documentation-deprecated-sync',
    '-Wno-missing-field-initializers',
    '-Wmissing-declarations',
    '-Wstrict-aliasing',
    '-Wstrict-prototypes',
    '-Wdeclaration-after-statement',
    '-Wshift-count-overflow',
    '-Wunused-const-variable',
    '-Wunused-function',
    '-Wint-conversion',
    '-Wc99-c11-compat',
    '-Wformat',
    '-Wformat-security',
    '-g',
    '-D_DEBUG',
    '-O0',
    '-DGIT_DEFAULT_CERT_LOCATION="/etc/ssl/cert.pem"'
  ],
  pic : true
)
libgit2_dep = declare_dependency(
  link_with : libgit2,
  compile_args : [],
  include_directories : libgit2_inc,
  link_args : []
)
llhttp_dir = include_directories('.')
llhttp_sys = include_directories(is_system : true)
llhttp_inc = [llhttp_dir, llhttp_sys]
llhttp_src = files('deps/llhttp/api.c', 'deps/llhttp/http.c', 'deps/llhttp/llhttp.c', 'deps/llhttp/llhttp.h')
llhttp = static_library(
  'llhttp',
  llhttp_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : llhttp_inc,
  install : false,
  override_options : [],
  objects : [],
  dependencies : [zlib_dep, mbedtls_dep],
  c_args : [
    '-D_GNU_SOURCE',
    '-Wno-documentation-deprecated-sync',
    '-Wno-missing-field-initializers',
    '-Wmissing-declarations',
    '-Wstrict-aliasing',
    '-Wstrict-prototypes',
    '-Wdeclaration-after-statement',
    '-Wshift-count-overflow',
    '-Wunused-const-variable',
    '-Wunused-function',
    '-Wint-conversion',
    '-Wc99-c11-compat',
    '-Wformat',
    '-Wformat-security',
    '-g',
    '-D_DEBUG',
    '-O0',
    '-Wno-unused-parameter',
    '-Wno-missing-declarations',
    '-DGIT_DEFAULT_CERT_LOCATION="/etc/ssl/cert.pem"'
  ],
  pic : true
)
llhttp_dep = declare_dependency(
  link_with : llhttp,
  compile_args : [],
  include_directories : llhttp_inc,
  link_args : []
)
pcre_dir = include_directories('src/pcre', 'deps/pcre', '.')
pcre_sys = include_directories(is_system : true)
pcre_inc = [pcre_dir, pcre_sys]
pcre_src = files(
  'deps/pcre/pcre_byte_order.c',
  'deps/pcre/pcre_chartables.c',
  'deps/pcre/pcre_compile.c',
  'deps/pcre/pcre_config.c',
  'deps/pcre/pcre_dfa_exec.c',
  'deps/pcre/pcre_exec.c',
  'deps/pcre/pcre_fullinfo.c',
  'deps/pcre/pcre_get.c',
  'deps/pcre/pcre_globals.c',
  'deps/pcre/pcre_jit_compile.c',
  'deps/pcre/pcre_maketables.c',
  'deps/pcre/pcre_newline.c',
  'deps/pcre/pcre_ord2utf8.c',
  'deps/pcre/pcre_refcount.c',
  'deps/pcre/pcre_string_utils.c',
  'deps/pcre/pcre_study.c',
  'deps/pcre/pcre_tables.c',
  'deps/pcre/pcre_ucd.c',
  'deps/pcre/pcre_valid_utf8.c',
  'deps/pcre/pcre_version.c',
  'deps/pcre/pcre_xclass.c',
  'deps/pcre/pcreposix.c'
)
pcre = static_library(
  'pcre',
  pcre_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : pcre_inc,
  install : false,
  override_options : [],
  objects : [],
  dependencies : [zlib_dep, mbedtls_dep],
  c_args : [
    '-D_GNU_SOURCE',
    '-Wno-documentation-deprecated-sync',
    '-Wno-missing-field-initializers',
    '-Wmissing-declarations',
    '-Wstrict-aliasing',
    '-Wstrict-prototypes',
    '-Wdeclaration-after-statement',
    '-Wshift-count-overflow',
    '-Wunused-const-variable',
    '-Wunused-function',
    '-Wint-conversion',
    '-Wc99-c11-compat',
    '-Wformat',
    '-Wformat-security',
    '-Wno-unused-function',
    '-Wno-implicit-fallthrough',
    '-Wno-unused-but-set-variable',
    '-g',
    '-D_DEBUG',
    '-O0',
    '-DGIT_DEFAULT_CERT_LOCATION="/etc/ssl/cert.pem"',
    '-DHAVE_CONFIG_H'
  ],
  pic : true
)
pcre_dep = declare_dependency(
  link_with : pcre,
  compile_args : [],
  include_directories : pcre_inc,
  link_args : []
)
util_dir = include_directories(
  'src/util',
  'include',
  'deps/llhttp',
  'deps/pcre',
  'deps/xdiff',
  '.'
)
util_sys = include_directories(is_system : true)
util_inc = [util_dir, util_sys]
util_src = files(
  'src/util/alloc.c',
  'src/util/allocators/debugalloc.c',
  'src/util/allocators/failalloc.c',
  'src/util/allocators/stdalloc.c',
  'src/util/allocators/win32_leakcheck.c',
  'src/util/date.c',
  'src/util/errors.c',
  'src/util/filebuf.c',
  'src/util/fs_path.c',
  'src/util/futils.c',
  'src/util/hash.c',
  'src/util/net.c',
  'src/util/pool.c',
  'src/util/posix.c',
  'src/util/pqueue.c',
  'src/util/rand.c',
  'src/util/regexp.c',
  'src/util/runtime.c',
  'src/util/sortedcache.c',
  'src/util/str.c',
  'src/util/strlist.c',
  'src/util/thread.c',
  'src/util/tsort.c',
  'src/util/utf8.c',
  'src/util/util.c',
  'src/util/varint.c',
  'src/util/vector.c',
  'src/util/wildmatch.c',
  'src/util/zstream.c',
  'src/util/hash/collisiondetect.c',
  'src/util/hash/sha1dc/sha1.c',
  'src/util/hash/sha1dc/ubc_check.c',
  'src/util/hash/builtin.c',
  'src/util/hash/rfc6234/sha224-256.c',
  'src/util/alloc.h',
  'src/util/allocators/debugalloc.h',
  'src/util/allocators/failalloc.h',
  'src/util/allocators/stdalloc.h',
  'src/util/allocators/win32_leakcheck.h',
  'src/util/array.h',
  'src/util/assert_safe.h',
  'src/util/bitvec.h',
  'src/util/cc-compat.h',
  'src/util/ctype_compat.h',
  'src/util/date.h',
  'src/util/errors.h',
  'src/util/filebuf.h',
  'src/util/fs_path.h',
  'src/util/futils.h',
  'src/util/git2_util.h',
  'src/util/hash.h',
  'src/util/hashmap.h',
  'src/util/hashmap_str.h',
  'src/util/integer.h',
  'src/util/map.h',
  'src/util/net.h',
  'src/util/pool.h',
  'src/util/posix.h',
  'src/util/pqueue.h',
  'src/util/process.h',
  'src/util/rand.h',
  'src/util/regexp.h',
  'src/util/runtime.h',
  'src/util/sortedcache.h',
  'src/util/staticstr.h',
  'src/util/str.h',
  'src/util/strlist.h',
  'src/util/strnlen.h',
  'src/util/thread.h',
  'src/util/utf8.h',
  'src/util/util.h',
  'src/util/varint.h',
  'src/util/vector.h',
  'src/util/wildmatch.h',
  'src/util/zstream.h',
  'src/util/unix/posix.h',
  'src/util/unix/pthread.h',
  'src/util/hash/collisiondetect.h',
  'src/util/hash/sha1dc/sha1.h',
  'src/util/hash/sha1dc/ubc_check.h',
  'src/util/hash/builtin.h',
  'src/util/hash/rfc6234/sha.h'
)
if is_windows
  util_src += files(
    'src/util/win32/dir.c',
    'src/util/win32/error.c',
    'src/util/win32/map.c',
    'src/util/win32/path_w32.c',
    'src/util/win32/posix_w32.c',
    'src/util/win32/process.c',
    'src/util/win32/thread.c',
    'src/util/win32/utf-conv.c',
    'src/util/win32/w32_buffer.c',
    'src/util/win32/w32_leakcheck.c',
    'src/util/win32/w32_util.c',
  )
else
  util_src += files(
    'src/util/unix/map.c',
    'src/util/unix/process.c',
    'src/util/unix/realpath.c',
  )
endif
util = static_library(
  'util',
  util_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : util_inc,
  install : false,
  override_options : [],
  objects : [],
  dependencies : [zlib_dep, mbedtls_dep],
  c_args : [
    '-D_GNU_SOURCE',
    '-Wno-documentation-deprecated-sync',
    '-Wno-missing-field-initializers',
    '-Wmissing-declarations',
    '-Wstrict-aliasing',
    '-Wstrict-prototypes',
    '-Wdeclaration-after-statement',
    '-Wshift-count-overflow',
    '-Wunused-const-variable',
    '-Wunused-function',
    '-Wint-conversion',
    '-Wc99-c11-compat',
    '-Wformat',
    '-Wformat-security',
    '-g',
    '-D_DEBUG',
    '-O0',
    '-DGIT_DEFAULT_CERT_LOCATION="/etc/ssl/cert.pem"',
    '-DSHA1DC_CUSTOM_INCLUDE_SHA1_C="git2_util.h"',
    '-DSHA1DC_CUSTOM_INCLUDE_UBC_CHECK_C="git2_util.h"',
    '-DSHA1DC_NO_STANDARD_INCLUDES=1'
  ],
  pic : true
)
util_dep = declare_dependency(
  link_with : util,
  compile_args : [],
  include_directories : util_inc,
  link_args : []
)
xdiff_dir = include_directories('.')
xdiff_sys = include_directories(
  'include',
  'src/util',
  'deps/llhttp',
  'deps/pcre',
  is_system : true
)
xdiff_inc = [xdiff_dir, xdiff_sys]
xdiff_src = files(
  'deps/xdiff/xdiffi.c',
  'deps/xdiff/xemit.c',
  'deps/xdiff/xhistogram.c',
  'deps/xdiff/xpatience.c',
  'deps/xdiff/xutils.c',
  'deps/xdiff/xmerge.c',
  'deps/xdiff/xprepare.c',
  'deps/xdiff/git-xdiff.h',
  'deps/xdiff/xdiff.h',
  'deps/xdiff/xdiffi.h',
  'deps/xdiff/xemit.h',
  'deps/xdiff/xinclude.h',
  'deps/xdiff/xmacros.h',
  'deps/xdiff/xprepare.h',
  'deps/xdiff/xtypes.h',
  'deps/xdiff/xutils.h'
)
xdiff = static_library(
  'xdiff',
  xdiff_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : xdiff_inc,
  install : false,
  override_options : [],
  objects : [],
  dependencies : [zlib_dep, mbedtls_dep],
  c_args : [
    '-D_GNU_SOURCE',
    '-Wno-documentation-deprecated-sync',
    '-Wno-missing-field-initializers',
    '-Wmissing-declarations',
    '-Wstrict-aliasing',
    '-Wstrict-prototypes',
    '-Wdeclaration-after-statement',
    '-Wshift-count-overflow',
    '-Wunused-const-variable',
    '-Wunused-function',
    '-Wint-conversion',
    '-Wc99-c11-compat',
    '-Wformat',
    '-Wformat-security',
    '-g',
    '-D_DEBUG',
    '-O0',
    '-Wno-sign-compare',
    '-Wno-unused-parameter',
    '-DGIT_DEFAULT_CERT_LOCATION="/etc/ssl/cert.pem"'
  ],
  pic : true
)
xdiff_dep = declare_dependency(
  link_with : xdiff,
  compile_args : [],
  include_directories : xdiff_inc,
  link_args : []
)
libgit2package_dir = include_directories(
  '.',
  'src/libgit2',
  'src/util',
  'include',
  'deps/llhttp',
  'deps/pcre',
  'deps/xdiff',
)
libgit2package_sys = include_directories(is_system : true)
libgit2package_inc = [libgit2package_dir, libgit2package_sys]
libgit2package_public_inc = [
  include_directories('.', 'include'),
  libgit2package_sys,
]
libgit2package_src = files()
libgit2package = static_library(
  'libgit2package',
  libgit2package_src,
  build_by_default : true,
  link_args : libgit2_link_args,
  link_with : [],
  include_directories : libgit2package_inc,
  install : false,
  override_options : [],
  objects : [
    libgit2.extract_all_objects(recursive : false),
    llhttp.extract_all_objects(recursive : false),
    pcre.extract_all_objects(recursive : false),
    util.extract_all_objects(recursive : false),
    xdiff.extract_all_objects(recursive : false)
  ],
  install_dir : 'lib',
  dependencies : [zlib_dep, mbedtls_dep, libgit2_system_deps],
  c_args : [],
  pic : false
)
libgit2package_dep = declare_dependency(
  link_with : libgit2package,
  compile_args : [],
  include_directories : libgit2package_public_inc,
  dependencies : [zlib_dep, mbedtls_dep],
  link_args : libgit2_link_args
)
libgit2_dep = libgit2package_dep
